# Seayon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  temp.cpp  thread_test.cpp
.github/workflows/: cmake.yml
.modules/timez/: timez.hpp
Seayon/include/: seayon.h  seayon.hpp
Seayon/src/: manage.cpp  print.cpp  pulse.cpp  seayon.cpp  system.cpp
SeayonDebug/src/: main.cpp
SeayonDemo/src/: main.cpp
SeayonMnist/: CMakeLists.txt  test.py
SeayonMnist/logs/: log.csv
SeayonMnist/res/: log(1).csv  log(2).csv  log.csv  mnist.nn
SeayonMnist/src/: import.cpp  main.cpp
SeayonMnistCuda/src/: main.cu
SeayonTrading/: CMakeLists.txt
SeayonTrading/res/: demo.py  test.py
SeayonTrading/src/: import.cpp  main.cpp
Tests/: CMakeLists.txt  unit_test.cpp  unit_tests.cpp
Tests/src/: accruacy.cpp
_tests/: unit_tests.cpp
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt
examples/demo/src/: main.cpp
examples/digit_recognition/src/: import.cpp  main.cpp
examples/digit_recognition_gpu/: CMakeLists.txt
examples/digit_recognition_gpu/src/: main.cu
include/: cuda_seayon.cuh  seayon.hpp  seayon_cuda.cuh  seayon_lite.h
include/src/: activation.cpp  backprop_matrix.cpp  basis.cpp  dataset.cpp  evaluation.cpp  fitlog.cpp  model.cpp  model_para.cpp  print.cpp  training.cpp
include/timez/: LICENSE  timez.hpp
local/: B.cpp  CMakeLists.txt  a.exp  a.lib  cuda_test.cu  inheritance.cpp  openmp_test.cpp  thread_start.cpp  thread_test.cu
res/: mnist.nn
tests/: unit_tests.cpp
