get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "_" ProjectId ${ProjectId})
project(${ProjectId})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/${CMAKE_BUILD_TYPE}/${PROJECT_NAME}")
add_executable(accruacy "${CMAKE_CURRENT_SOURCE_DIR}/src/accruacy.cpp")
add_executable(combine "${CMAKE_CURRENT_SOURCE_DIR}/src/combine.cpp")
add_executable(cost "${CMAKE_CURRENT_SOURCE_DIR}/src/cost.cpp")
add_executable(load "${CMAKE_CURRENT_SOURCE_DIR}/src/load.cpp")
add_executable(save "${CMAKE_CURRENT_SOURCE_DIR}/src/save.cpp")
add_executable(pulse "${CMAKE_CURRENT_SOURCE_DIR}/src/pulse.cpp")
add_executable(fit "${CMAKE_CURRENT_SOURCE_DIR}/src/fit.cpp")
add_executable(cleanss "${CMAKE_CURRENT_SOURCE_DIR}/src/clean.cpp")

install(TARGETS accruacy RUNTIME DESTINATION ${INSTALL_DIR})